...
  AppLocalizationsEn([String locale = 'en']) : super(locale);

  @override
  String get appTitle => 'HijriMinder';

  @override
  String get calendar => 'Calendar';

  @override
  String get prayerTimes => 'Prayer Times';

  @override
  String get reminders => 'Reminders';
...
      'Apple Sign-In is not available on this platform';

  @override
  String get selectCalendarTypes => 'Select Calendar Types';

  @override
  String get hijriCalendar => 'Hijri Calendar';

  @override
  String get gregorianCalendar => 'Gregorian Calendar';

  @override
  String get bothCalendars => 'Both Calendars';
...
